force-app/main/default/objects/GutschriftApproval__e/GutschriftApproval__e.object-meta.xml
<CustomObject>
    <description>Is fired when Gutschriften are approved by external Users.</description>
    <label>Gutschrift Approval</label>
    <pluralLabel>GutschriftApprovals</pluralLabel>
</CustomObject>