force-app/main/default/objects/GutschriftApproval__e/fields/ProvisionId__c.field-meta.xml
<CustomField>
    <fullName>ProvisionId__c</fullName>
    <description>ID of Provision__c where Gutschrift belongs to.</description>
    <label>Provision ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>